Fix z-index values

--- a/h5p-bildetema/src/components/LanguageFavorites/LanguageFavorites.module.scss
+++ b/h5p-bildetema/src/components/LanguageFavorites/LanguageFavorites.module.scss
@@ -6,7 +6,7 @@
   padding: $spacing--32 0;
   position: sticky;
   top: 0;
-  z-index: $fav-language-selector-z-index;
+  z-index: $language-favorites-z-index;
 
   /* Hide scrollbar for Chrome, Safari and Opera */
   &::-webkit-scrollbar {
